# ir_datasets

./: CITATION.bib  CITATION.cff  MANIFEST.in  README.md  output.bib  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  topics2021.xml
.github/ISSUE_TEMPLATE/: bug_report.md  dataset-addition.md  documentation.md
.github/workflows/: deploy.yml  push.yml  pylint.yml  release.yml  test.yml  verify_downloads.yml
datamaestro/: mkdocs.yml
docs/: CNAME  all.html  antique.html  aquaint.html  beir.html  car-v1.5.html  car.html  cli.html  clinicaltrials.html  clirmatrix.html  clueweb09.html  clueweb12.html  clueweb_warc_checkpoints.md  codesearchnet.html  cord19.html  cranfield.html  datasets.html  downloads.html  dpr-w100.html  gov.html  gov2.html  highwire.html  index.html  main.css  main.js  medline.html  msmarco-document-v2.html  msmarco-document.html  msmarco-passage-v2.html  msmarco-passage.html  msmarco-qna.html  natural-questions.html  nfcorpus.html  nyt.html  pmc.html  python-beta.html  python.html  trec-arabic.html  trec-fair-2021.html  trec-mandarin.html  (+7 more)
docs/master/: antique.html  aquaint.html  beir.html  c4.html  car.html  cli.html  clinicaltrials.html  clirmatrix.html  clueweb09.html  clueweb12.html  codesearchnet.html  cord19.html  cranfield.html  downloads.html  dpr-w100.html  gov.html  (+27 more)
examples/: adding_datasets.ipynb  clirmatrix_example.py  ir_datasets.ipynb  ir_datasets_cli.ipynb
ir_datasets/: __init__.py  __main__.py  lazy_libs.py  log.py
test/: downloads.py  fileio.py  fio.py  metadata.py  test_defaulttext.py  test_local.py  util.py
(+505 files in other folders)
